Added Intellisense for slot assignment