@@ -1,6 +1,7 @@
 package com.github.glennlefevere.stenciljswebcomponents.completationProvider;
 
 import com.github.glennlefevere.stenciljswebcomponents.listeners.StencilProjectListener;
+import com.github.glennlefevere.stenciljswebcomponents.model.StencilDocComponent;
 import com.github.glennlefevere.stenciljswebcomponents.model.StencilMergedDoc;
 import com.github.glennlefevere.stenciljswebcomponents.util.CompletionTypeUtil;
 import com.intellij.codeInsight.completion.CompletionParameters;
@@ -22,13 +23,19 @@ public class HtmlTagCompletionProvider extends CompletionProvider<CompletionPara
                                   @NotNull CompletionResultSet completionResultSet) {
 
 
-       if (CompletionTypeUtil.isTag(parameters)) {
-            StencilMergedDoc mergedDoc = StencilProjectListener.INSTANCE.getStencilMergedDocForProject(parameters.getOriginalFile().getProject());
-            if (mergedDoc != null && mergedDoc.getComponents() != null) {
-                completionResultSet.addAllElements(
-                        mergedDoc.getComponents().stream()
-                                .map(component -> IconUtil.addIcon(LookupElementBuilder.create(component.tag)))
-                                .collect(Collectors.toList()));
+        StencilMergedDoc mergedDoc = StencilProjectListener.INSTANCE.getStencilMergedDocForProject(parameters.getOriginalFile().getProject());
+        if (CompletionTypeUtil.isTag(parameters) && mergedDoc != null && mergedDoc.getComponents() != null) {
+            completionResultSet.addAllElements(
+                    mergedDoc.getComponents().stream()
+                            .map(component -> IconUtil.addIcon(LookupElementBuilder.create(component.tag)))
+                            .collect(Collectors.toList()));
+        } else if (mergedDoc != null && mergedDoc.getComponents() != null) {
+            StencilDocComponent result = CompletionTypeUtil.isAttributeValueTokenOfSlotAndChildOfStencilElement(parameters, mergedDoc);
+            if (result != null) {
+                completionResultSet.addAllElements(result.getSlots()
+                        .stream()
+                        .map((slot) -> IconUtil.addIcon(LookupElementBuilder.create(slot.name)))
+                        .toList());
             }
         }
 
